[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/actors/objects/dry_bones/bone/bone.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/objects/dry_bones/bone/bone.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Bone" type="Area2D"]
collision_layer = 8192
collision_mask = 2
monitorable = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -128, -128, 256, 256 )

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="screen_exited"]
